--- a/about_us.html
+++ b/about_us.html
@@ -43,22 +43,17 @@
       <div class="box">
         <h2 class="section-title" style="margin-left: -20%;">Sawyer McAlhany</h2>
         <img src="Sawyer.jpg" alt="Sawyer McAlhany, DIWhy programmer">
-        <p>When I was young, I loved Computers, this passion eventually lead to my acceptance at The University Of Alabama with a CyberSecurity Major. my hobbies include Video Games, Tinkering, and Renewing older hardware. I am certified in CompTIA ITF+ and FANUC Handling Tool, as well as Adobe InDesign. I plan to get my Security+ This year. He was a Major part of the 2024 UACTF D2 3rd Place team, and the 2025 UACTF D1 First Place team.</p>
+        <p>When I was young, I loved Computers, this passion eventually lead to my acceptance at The University Of Alabama with a Cyber Security Major. my hobbies include Video Games, Tinkering, and Renewing older hardware. I am certified in CompTIA ITF+ and FANUC Handling Tool, as well as Adobe InDesign. I plan to get my Security+ This year. He was a Major part of the 2024 UACTF D2 3rd Place team, and the 2025 UACTF D1 First Place team.</p>
       </div>
       <div class="box">
         <h2 class="section-title" style="margin-left: -20%;">Evan Wittman</h2>
-<<<<<<< HEAD
         <img src="IMG_9956.jpg" alt="Evan, researcher">
-        <p>I am from a military family so I spent most of my life moving around till I ended up here I will be going to the University of Alabama in the fall for cybersecurity in my free time I enjoy playing soccer at the local YMCA and playing competitive Pokemon
-=======
-        <img src="IMG_9956.jpg" alt="Evan, Veganisim and pokemon researcher">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
->>>>>>> fb74035176aede37c8021d9a6df64af42b63ce84
+        <p>I am from a military family so I spent most of my life moving constantly before now. I will be attending the University of Alabama this fall for Cyber Security. In my free time I enjoy playing soccer at the local YMCA and competitive Pokemon online.
       </div>
       <div class="box">
         <h2 class="section-title" style="margin-left: -20%;">Alex Stuart</h2>
         <img src="Alex.JPG" alt="Alex Stuart, Unpaid Artist">
-        <p> I'm an Alabama Native and Lifetime Resident. I spend my free time creating music, video games, and art.  learning, collecting retro gaming systems. I am certified in MS Word & PowerPoint as well as Adobe InDesign / Illustrator . I am an active member of my chapter's robotics team. I plan to get a bachelor's degree in cyber security.</p>
+        <p> I'm an Alabama Native and Lifetime Resident. I spend my free time creating music, video games, and art.  learning, collecting retro gaming systems. I am certified in MS Word & PowerPoint as well as Adobe InDesign / Illustrator . I am an active member of my chapter's robotics team and plan to get a bachelor's degree in cyber security.</p>
       </div>
     </div>
 
