--- a/about_us.html
+++ b/about_us.html
@@ -42,7 +42,7 @@
       </div>
       <div class="box">
         <h2 class="section-title" style="margin-left: -20%;">Sawyer McAlhany</h2>
-        <img src="Sawyer.jpg" alt="Sawyer McAlhany, DIWhy programmer">
+        <img src="Sawyer.jpg" alt="Sawyer McAlhany">
         <p>When I was young, I loved Computers, this passion eventually lead to my acceptance at The University Of Alabama with a Cyber Security Major. my hobbies include Video Games, Tinkering, and Renewing older hardware. I am certified in CompTIA ITF+ and FANUC Handling Tool, as well as Adobe InDesign. I plan to get my Security+ This year. He was a Major part of the 2024 UACTF D2 3rd Place team, and the 2025 UACTF D1 First Place team.</p>
       </div>
       <div class="box">
