cleaned up some code

--- a/about_us.html
+++ b/about_us.html
@@ -37,7 +37,7 @@
     <div class="about_us_grid">
       <div class="box">
         <h2 class="section-title" style="margin-left: -20%;">Elijah Piazza</h2>
-        <img src="IMG_4847.png" alt="Elijah Piazza, self-proclaimed glorious team leader">
+        <img src="IMG_4847.png" alt="Elijah Piazza">
         <p>I am from a military family, and was born in Louisiana, but ended up traveling every three years from Kansas, Alabama, Hawaii, and finally back to Alabama for good. I enjoy programming, painting, D&D, and circuitry. I am a member of the EHS Cyber Security Team, National Honor Society, and National Technical Honors Society. My certifications include HTML&CSS, Adobe Express, Digital Media Literacy, and Fiber Optic Technician Certification. I hope to obtain a bachelor's in Computer Engineering with a minor in Computer Science.</p>
       </div>
       <div class="box">
@@ -47,12 +47,12 @@
       </div>
       <div class="box">
         <h2 class="section-title" style="margin-left: -20%;">Evan Wittman</h2>
-        <img src="IMG_9956.jpg" alt="Evan, researcher">
+        <img src="IMG_9956.jpg" alt="Evan">
         <p>I am from a military family so I spent most of my life moving constantly before now. I will be attending the University of Alabama this fall for Cyber Security. In my free time I enjoy playing soccer at the local YMCA and competitive Pokemon online.
       </div>
       <div class="box">
         <h2 class="section-title" style="margin-left: -20%;">Alex Stuart</h2>
-        <img src="Alex.JPG" alt="Alex Stuart, Unpaid Artist">
+        <img src="Alex.JPG" alt="Alex Stuart">
         <p> I'm an Alabama Native and Lifetime Resident. I spend my free time creating music, video games, and art.  learning, collecting retro gaming systems. I am certified in MS Word & PowerPoint as well as Adobe InDesign / Illustrator . I am an active member of my chapter's robotics team and plan to get a bachelor's degree in cyber security.</p>
       </div>
     </div>
