--- a/documentation.html
+++ b/documentation.html
@@ -33,6 +33,10 @@
             <center>
                 <embed src="work_log.pdf" width="50%" height="800px">
             </center>
+            <h2 class="section-title" style="font-size: 2.15rem; margin-left: 20%;">Works Cited</h2>
+            <center>
+                <embed src="04142025.pdf" width="50%" height="800px">
+            </center>
             <h2 class="section-title" style="font-size: 2.15rem; margin-left: 20%;">Image Attribution</h2>
             <center>
             <p>
