last minute changes

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <!--Talk about how vegan gelato is actually made, see the recipe sheet-->
     <div id="process">
       <h2 class="section-title">Our Process</h2>
-      <p>Our Gelato is created with completely plant-based and organic non-GMO ingredients. We use Almond and Coconut milk, sugar, and cornstarch for all our bases. All of our ingredients are sourced from Alabama farms. From there, our expert staff mix, freeze, and prepare the Gelato in-house</p>
+      <p>Our gelato is created with completely plant-based and organic non-GMO ingredients. We use Almond and Coconut milk, sugar, and cornstarch for all our bases. All of our ingredients are sourced from Alabama farms. From there, our expert staff mix, freeze, and prepare the Gelato in-house.</p>
     </div>
     <!--Yes this is badly done, no I will not change it-->
     <section class="diagonal_B">
