--- a/about_us.html
+++ b/about_us.html
@@ -27,7 +27,7 @@
       <div class="wrapper">
 
         <h2 class="section-title" style="font-size: 2.15rem;">Our Story</h2>
-        <p>The story of Piazza's Parlour starts with the City of Enterprise TSA chapter. it is one of the best in Alabama, and is proud to represent TSA and all it stands for. in 2025 we decided to create a resturant that did would capture the essence of TSA. And so we decided to create a cruelty free treat that anyone, from any walk of life could enjoy, without sacrificing quality. On March 31nd, we opened our parlour on 123 Mainstreet, Enterprise Alabama, and have been sharing joy since.</p>
+        <p>The story of Piazza's Parlour starts with the City of Enterprise TSA chapter. It is one of the best in Alabama, and is proud to represent TSA and all it stands for. In 2025 we decided to create a resturant that did would capture the essence of TSA. And so we decided to create a cruelty free treat that anyone, from any walk of life could enjoy, without sacrificing quality. On March 31st, we opened our parlour on 123 Mainstreet, Enterprise Alabama, and have been sharing joy since.</p>
 
       </div>
     </section>
@@ -43,7 +43,7 @@
       <div class="box">
         <h2 class="section-title" style="margin-left: -20%;">Sawyer McAlhany</h2>
         <img src="Sawyer.jpg" alt="Sawyer McAlhany">
-        <p>When I was young, I loved Computers, this passion eventually lead to my acceptance at The University Of Alabama with a Cyber Security Major. my hobbies include Video Games, Tinkering, and Renewing older hardware. I am certified in CompTIA ITF+ and FANUC Handling Tool, as well as Adobe InDesign. I plan to get my Security+ This year. He was a Major part of the 2024 UACTF D2 3rd Place team, and the 2025 UACTF D1 First Place team.</p>
+        <p>When I was young, I loved Computers, this passion eventually lead to my acceptance at The University Of Alabama with a Cyber Security Major. my hobbies include Video Games, Tinkering, and Renewing older hardware. I am certified in CompTIA ITF+ and FANUC Handling Tool, as well as Adobe InDesign. I plan to get my Security+ This year. I was a Major part of the 2024 UACTF D2 3rd Place team, and the 2025 UACTF D1 First Place team.</p>
       </div>
       <div class="box">
         <h2 class="section-title" style="margin-left: -20%;">Evan Wittman</h2>
